--- a/Personnages/PNJ/01.PNJ Liste.md
+++ b/Personnages/PNJ/01.PNJ Liste.md
@@ -2,7 +2,7 @@ Ou PNJ, c'est le **Maître de Jeu** qui les anime.
 
 ## Personnages de la Guilde : 
 - Volkar le Magnifique - *fondateur de la guilde, que personne ne connait*
-- Mirage - *votre hôtesse privilégiée* 
+- Mirande - *votre hôtesse privilégiée* 
 - Nélen - *le tenancier de la taverne de la guilde* 
 
 ## Empire d'Orkozz 
