--- a/Personnages/PNJ/01.PNJ Liste.md
+++ b/Personnages/PNJ/01.PNJ Liste.md
@@ -1,8 +1,8 @@
-Ou PNJ, c'est le **Maître de Jeu** qui les anime. 
+Ou PNJ, c'est le **Maître de Jeu** qui les anime. Cliquez sur les liens pour découvrir leur desceription. 
 
 ## Personnages de la Guilde : 
-- Volkar le Magnifique - *fondateur de la guilde, que personne ne connait*
-- Mirande - *votre hôtesse privilégiée* 
+- [Volkar le Magnifique](https://github.com/LonanAedhia/IrionaWorld/blob/main/Personnages/PNJ/Guilde/Volkar%20le%20Magnifique.md) - *fondateur de la guilde, que personne ne connait*
+- [Mirande](https://github.com/LonanAedhia/IrionaWorld/blob/main/Personnages/PNJ/Guilde/Mirande.md) - *votre hôtesse privilégiée* 
 - Nélen - *le tenancier de la taverne de la guilde* 
 
 ## Empire d'Orkozz 
